--- a/index.html
+++ b/index.html
@@ -4,8 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flower Shop Assignment</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,700;1,700&family=Open+Sans&display=swap" rel="stylesheet">
+
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+<!-- This is banner section  -->
+        <div class="banner-section">
+            <div class="banner-content">
+                <h1 class="banner-title">Let's make <br>beautiful flowers a <br> part of your life.</h1>
+                 <p class="banner-description">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout. The point of using Lorem Ipsum is <br> that it has a more-or-less normal distribution of letters.</p>
+                 <button class="btn">Shop Now</button>
+            </div>
+                <img class="banner-image" src="./image/pngwing 10.png" alt="Flower 10">
+        </div>
+    </header>
+
+    <main>
+        <!-- Feature section area  -->
+        <section class="feature-container">
+            <div class="feature-content">
+                <h1 class>Our Featured Flowers</h1>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            </div>
+
+        </section>
+
+
+    </main>
+    <footer></footer>
 </body>
 </html>
