--- a/index.html
+++ b/index.html
@@ -87,10 +87,17 @@
                
             </div>
         </section>
-
-
-
-
+<!-- Latest deal section  -->
+        <section class="latest-deal-section">
+            <div class="latest-deal">
+            <div class="latest-deal-area">
+                <h1 class="latest-deal-title">Get The Latest Deals</h1>
+                <p class="latest-deal-description">$30 coupon for first shopping</p>
+            </div>
+            <input class="latest-deal-input" type="email" placeholder="Enter Your Email Here...">
+            <button class="btn">Subscribe</button>
+        </div>
+        </section>
     </main>
     <footer></footer>
 </body>
