--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@
         </div>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer-section">
+            <h1 class="footer-title">Flower<span class="shop-content">Shop</span></h1>
+            <p class="footer-description">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+            <p class="condition">@2020-2023, FlowerShop.com. All rights reserved. </p>
+        </div>
+    </footer>
 </body>
 </html>
