idea section added

--- a/index.html
+++ b/index.html
@@ -58,6 +58,15 @@
             </div>
         </section>
 
+<!-- Idea section  -->
+        <section class="idea-section">
+            <div class="idea-description">
+                <p>"Happiness held is the seed; Happiness shared is the flower"</p>
+                <p>– John Harrigan</p>
+            </div>
+            <img class="idea-image" src="./image/women.png" alt="">
+        </section>
+
 <!-- Hot deal sectin -->
 
         <div class="hotdeal-section">
